src/objects/Callback__c.object
<CustomObject>
    <description>Object named &quot;Callback&quot; which will be used to store callbacks generated through the system</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Callbacks</relationshipLabel>
        <relationshipName>Callbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <label>Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Callbacks</relationshipLabel>
        <relationshipName>Callbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Possible_Renewal__c</fullName>
        <description>CSP-1869 | If &quot;Yes&quot; this means the creating Opportunity had a Type of &quot;Renewal&quot;, so this Callback record may be for a Subscription Renewal.</description>
        <inlineHelpText>If &quot;Yes&quot; this means the creating Opportunity had a Type of &quot;Renewal&quot;, so this Callback record may be for a Subscription Renewal.</inlineHelpText>
        <label>Is Possible Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Callbacks</relationshipLabel>
        <relationshipName>Callbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>*However the OOB functionality works is fine; main goal is to just keep track of all notes, and not delete them</description>
        <inlineHelpText>*However the OOB functionality works is fine; main goal is to just keep track of all notes, and not delete them</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Follow Up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Charge_Number__c</fullName>
        <description>CSP-1464 | used to keep track of which Subscription Product Charge with which the Callback is associated</description>
        <externalId>true</externalId>
        <label>Subscription Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <description>Name of the Subscription for which this Callback is associated. Specifically added to query/delete Callbacks for Charges that were removed in an Amendment Quote. (CSP-1464)</description>
        <externalId>true</externalId>
        <label>Subscription Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Product_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Product &amp; Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Callbacks</relationshipLabel>
        <relationshipName>Callbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIP_Account__c</fullName>
        <description>Account is a VIP Account (CSP-1449)</description>
        <formula>Account__r.VIP_Program__c</formula>
        <inlineHelpText>Account is a VIP Account</inlineHelpText>
        <label>VIP Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Callbacks</relationshipLabel>
        <relationshipName>Callbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <label>Vendor Phone</label>
        <type>Phone</type>
    </fields>
    <label>Callback</label>
    <nameField>
        <label>Callback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>